Fix alternate PDF viewer overflowing bounds of container

--- a/src/plugins/pdf/pdf.scss
+++ b/src/plugins/pdf/pdf.scss
@@ -14,6 +14,6 @@ $pdf-background-color: #404040;
 	padding: 5px 10px;
 	box-sizing: border-box;
 	text-align: center;
-	position: absolute;
+	position: relative;
     overflow: auto;
 }
